--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,6 +14,7 @@ name: "CodeQL"
 on:
   push:
     branches: [ "main" ]
+    paths: [ "*.js", "**.py" ]
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ "main" ]
